# Servido_Cliente_BLE

./: client.c
Cliente/: CMakeLists.txt  README.md  client.c
Cliente/lib/: font.h  ssd1306.c
Servidor/: CMakeLists.txt  server.c
